--- a/app/blocks/request-status/request-status.pug
+++ b/app/blocks/request-status/request-status.pug
@@ -4,3 +4,8 @@ mixin request-status(icon)
       +icon(icon)(class="icon_" + icon)
     +e.text
       block
+
+mixin request-status-simple()
+  +b.request-status_simple&attributes(attributes)
+    +e.text
+      block
