--- a/app/blocks/space-description/space-description.scss
+++ b/app/blocks/space-description/space-description.scss
@@ -164,4 +164,27 @@
       }
     }
   }
+
+  &_request2 {
+    #{$b} {
+      &__media {
+        flex: 1;
+
+        @include screen('sm') {
+          flex: none;
+          width: 100%;
+          margin-bottom: 10px;
+        }
+      }
+
+      &__content {
+        flex: 1.35;
+
+        @include screen('sm') {
+          flex: none;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
