--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -124,6 +124,10 @@
           padding-top: 0;
         }
       }
+
+      &#{$b}__column_ptp34 {
+        padding-top: 34px;
+      }
     }
 
     &_aside {
