--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -95,6 +95,7 @@ include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
 include ../blocks/request-info/request-info
 include ../blocks/request-status/request-status
+include ../blocks/request-type/request-type
 include ../blocks/request/request
 include ../blocks/scroll-form/scroll-form
 include ../blocks/section/section
