--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -20,7 +20,7 @@ block content
         +link(href="messages.html") Messages (messages.html)
         +link(href="conversation.html") Messages One Conversation (conversation.html)
         +link(href="reservation-history.html") Reservation History (reservation-history.html)
-        +link(href="host-reservations-old-version.html") HOST reservations (host-reservations.html)
+        +link(href="host-reservations-old-version.html") HOST reservations (host-reservations-old-version.html)
         +link(href="order-summary.html") Order summary(order-summary.html)
         +link(href="order-checkout.html") Order checkout(order-checkout.html)
         +link(href="signup.html") Sign Up (signup.html)
