--- a/app/blocks/request-info/request-info.pug
+++ b/app/blocks/request-info/request-info.pug
@@ -4,3 +4,15 @@ mixin request-info()
       +short-profile-origin('assets/images/ava.jpg', ' Mr. Edward Pullman')
     +time('30 October 2018', '2018-10-30', '30 October 2019', '2019-10-30').__time
     block
+
+mixin request-info-table()
+  +b.request-info_table&attributes(attributes)
+    block
+
+mixin request-info-row()
+  +e.row&attributes(attributes)
+    block
+
+mixin request-info-cell()
+  +e.cell&attributes(attributes)
+    block
