--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -17,6 +17,16 @@
     }
   }
 
+  &__text {
+    @include text-mid;
+
+    font-weight: 400;
+
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
+
   &__form {
     flex: 1;
 
@@ -44,6 +54,13 @@
       @include screen('bg') {
         margin-right: 20px;
       }
+    }
+
+    &_line {
+      display: inline-flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
     }
   }
 
@@ -103,6 +120,32 @@
           @include screen('sm') {
             margin-right: 30px;
           }
+        }
+      }
+    }
+  }
+
+  &_reserv {
+    margin-left: -7px;
+    margin-right: -7px;
+    width: calc(100% + 14px);
+    padding-right: 7px;
+    box-sizing: border-box;
+
+    &:not(:last-child) {
+      margin-bottom: 19px;
+    }
+
+    #{$b} {
+
+      &__wrapper {
+
+        &:not(:last-child) {
+          margin-right: 40px;
+        }
+
+        &:last-child {
+          margin-right: 0;
         }
       }
     }
