host reservation new (without select from checkboxes on mobile)

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -25,6 +25,18 @@
     }
   }
 
+  &_mid {
+    min-width: 13px;
+    width: 13px;
+    height: 13px;
+
+    @include screen('sm') {
+      min-width: 8px;
+      width: 8px;
+      height: 8px;
+    }
+  }
+
   &_big {
     min-width: 19px;
     width: 19px;
