--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -48,6 +48,18 @@
       line-height: (20 / 16);
     }
 
+    &_mfz10 {
+      @include screen('sm') {
+        @include text10;
+
+        line-height: (13 / 10);
+      }
+    }
+
+    &_lsp {
+      letter-spacing: .02em;
+    }
+
     #{$b}.is-empty & {
       color: $color-text-gray2;
     }
