--- a/app/blocks/time/time.pug
+++ b/app/blocks/time/time.pug
@@ -22,7 +22,7 @@ mixin time-big(start, startISO, end, endISO, color)
     block
 
 mixin time-origin()
-  +b.time_sb&attributes(attributes)
+  +b.time&attributes(attributes)
     block
 
 mixin time-text()
@@ -35,3 +35,6 @@ mixin time-time()
 
 mixin time-divider()
   +long-arrow.__divider&attributes(attributes)
+
+mixin time-arrow()
+  +icon('arrow4').__arrow&attributes(attributes)
