--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -127,6 +127,14 @@
 
       &#{$b}__column_ptp34 {
         padding-top: 34px;
+
+        @include screen('lg') {
+          padding-top: 40px;
+        }
+
+        @include screen('sm') {
+          padding-top: 10px;
+        }
       }
     }
 
