--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -134,6 +134,14 @@
 
     &:not(:last-child) {
       margin-bottom: 19px;
+
+      @include screen('md') {
+        margin-bottom: 44px;
+      }
+
+      @include screen('sm') {
+        margin-bottom: 26px;
+      }
     }
 
     #{$b} {
@@ -142,6 +150,10 @@
 
         &:not(:last-child) {
           margin-right: 40px;
+
+          @include screen('md') {
+            margin-right: 18px;
+          }
         }
 
         &:last-child {
