--- a/app/blocks/short-profile/short-profile.scss
+++ b/app/blocks/short-profile/short-profile.scss
@@ -159,4 +159,18 @@
       }
     }
   }
+
+  &_smava {
+
+    #{$b} {
+
+      &__avatar {
+        @include screen('sm') {
+          min-width: 16px;
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+  }
 }
