--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -156,6 +156,7 @@ $color-profile-name: #535965;
 $color-border-state: #3d4552;
 $color-tooltip: #5bb2d6;
 $color-form-arrow: #a1abb8;
+$color-viewing: #cfb067;
 
 // ##########
 // Transitions
